# Autos

./: README.md  Toolchain-arm-linux-gnueabihf.cmake  test
IPMapping/: CMakeLists.txt  package.xml
IPMapping/src/: IPMapper.cpp  IPMapper.h  IPMapper_node.cpp
ip_mapping/: CMakeLists.txt  CMakeLists.txt~
ip_mapping/launch/: vision.launch
ip_mapping/src/: IPMapper.cpp  ip_mapper_node.cpp
line_detection/: CMakeLists.txt  CMakeLists.txt~
line_detection/launch/: vision.launch
line_detection/src/: ContourModel.cpp  ContourModel.h  IPMapper.cpp  LaneDetector.cpp  LaneDetector.h  LaneModel.cpp  LaneModel.h  laneDetection.cpp  laneDetection.h
manual_control/: CMakeLists.txt  package.xml
manual_control/launch/: motor_PC.launch
manual_control/src/: manual_control_node.cpp
motor_communication/: CMakeLists.txt  package.xml
motor_communication/include/: motor_communication.h
motor_communication/launch/: motor.launch  motor_PC.launch
motor_communication/src/: motor_communication.cpp  motor_communication_node.cpp  motor_communication_test.cpp
my_code/: CMakeLists.txt  package.xml
my_code/launch/: joystick.launch
my_code/src/: addieren.cpp  camera_test.cpp  listener.cpp  listener1.cpp  talker.cpp  talker1.cpp
my_robot/model/: model.config
send_steering/: CMakeLists.txt  package.xml
send_steering/include/: send_steering.h
send_steering/launch/: servo.launch~  servo_PC.launch
send_steering/src/: send_steering.cpp  send_steering_node.cpp
serial/: CMakeLists.txt
serial/examples/: serial_example.cc  serial_otto.cc
slam/: CMakeLists.txt  package.xml
slam/config/FEATURE_FILES/: camera.txt  map.txt
slam/launch/: slam1.launch  slam2.launch
slam/src/: Kalman.cpp  Kalman1.cpp  Kalmaninverse (copy).cpp  slam.cpp  slam_node.cpp  tf_kalman_node.cpp  tf_kalman_node1.cpp
test_car/: README.md
test_car/test_control/: CMakeLists.txt  package.xml
test_car/test_control/config/: test_control.yaml
test_car/test_control/launch/: rrbot_rqt.launch  test_control.launch
test_car/test_description/: CMakeLists.txt  g.cpp  package.xml
test_car/test_description/launch/: fuCar.gazebo.launch  fuCar.launch  fuCar.rviz  fuCar.urdf.launch
test_car/test_description/launch_/: test_rviz.launch
test_car/test_description/meshes/: wheel.stl
test_car/test_description/urdf/: materials.xacro  test.gazebo  test.xacro
test_car/test_description/xacro/fuCar/: fuCar.xacro  fuCar_body.xacro  fuCar_body_.xacro  fuCar_car.xacro  fuCar_chassis (copy).xacro  fuCar_chassis.xacro  fuCar_plugins.xacro  fuCar_wheels.xacro
test_car/test_description/xacro/laser/: hokuyo.xacro
test_car/test_gazebo/: CMakeLists.txt  package.xml
test_car/test_gazebo/launch/: mapping_default.launch  test_world.launch  test_world.launch~  tutorial.launch
test_car/test_gazebo/launch/slam/: geotiff_mapper.launch  hector_mapping.launch  slam.launch
test_car/test_gazebo/model/: model.sdf
test_car/test_gazebo/worlds/: drc_practice_task_1.world  test.world  vrc_final_task1.world
