<?xml version="1.0"?>
<package>
  <name>test_control</name>
  <version>0.0.0</version>
  <description>The audi_control package</description>

  <maintainer email="zahra.boroujeni@gmail.com">Zahra Boroujeni</maintainer>

  <license>BSD</license>


  <author email="zahra.boroujeni@gmail.com">Zahra Boroujeni</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>controller_manager</run_depend>

  <export>
  </export>

</package>