<package>
  <name>test_gazebo</name>
  <version>0.1.0</version>
  <description>test_gazebo</description>
  <maintainer email="zahra.boroujeni@gmail.com">Zahra Boroujeni</maintainer>

  <license>BSD</license>

  <author email="zahra.boroujeni@gmail.com">Zahra Boroujeni</author>

  <buildtool_depend>catkin</buildtool_depend>
 
  <!-- Package Dependencies -->
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>gazebo_ros</build_depend>

  <run_depend>test_description</run_depend>
  <run_depend>test_control</run_depend> 
  <run_depend>gazebo_ros</run_depend> 


  <build_depend>boost</build_depend>
  <export>
  </export>
</package>
